[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spectral_density_fit"
authors = [{name = "Johannes Feist", email = "johannes.feist@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "numpy >=1.15",
    "jax >=0.3",
    "nlopt >=2.7.0",
]

[project.urls]
Home = "https://github.com/jfeist/spectral_density_fit"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "ruff>=0.11.2",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type [sS]wig[a-zA-Z]+ has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 200
[tool.ruff.format]
skip-magic-trailing-comma = true
